--- a/DockerGuide/Dockerfile
+++ b/DockerGuide/Dockerfile
@@ -1,9 +1,15 @@
-# Gets the slim version from a DockerHub
+# Specify Base Image from the DockerHub
 FROM python:alpine3.19
 
 # set /app as the working directory
-# copy content in local src folder to /app directory within the container.
 WORKDIR /app
+# Docker works in layers, any file that has not changed will be cached.
+COPY requirements.txt .
+
+RUN pip3 install -r requirements.txt
+
+
+# copy content in local src folder to /app directory within the container.
 COPY ./src .
 
 # base directory
@@ -11,3 +17,6 @@ COPY ./src .
 # -- src
 # ----- | sourcecode
 # -- Dockerfile
+
+EXPOSE 8501
+
